basic user auth complete

--- a/public/index.html
+++ b/public/index.html
@@ -58,5 +58,6 @@
     ></script>
     <!-- AdminLTE App 3.1.0-->
     <script src="https://cdn.jsdelivr.net/npm/admin-lte@3.1.0/dist/js/adminlte.min.js"></script>
+    <script src="/dist/js/demo.js"></script>
   </body>
 </html>
