add shop category

--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,11 @@
       integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
       crossorigin="anonymous"
     ></script>
+    <!-- dropzonejs -->
+    <script 
+    class="assets_cp"
+    src="https://cdn.jsdelivr.net/npm/dropzone@5.9.2/dist/dropzone.min.js"></script>
+
     <!-- AdminLTE App 3.1.0-->
     <script
       class="assets_cp"
@@ -127,10 +132,10 @@
 
     <!-- front -->
     <!-- Main jQuery -->
-    <script
+    <!-- <script
       class="assets_front"
       src="/assets_front/plugins/jquery/dist/jquery.min.js"
-    ></script>
+    ></script> -->
     <!-- Bootstrap 3.1 -->
     <script
       class="assets_front"
