--- a/public/index.html
+++ b/public/index.html
@@ -6,38 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-
-    <!-- cp -->
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
-      crossorigin="anonymous"
-    />
-    <!-- Google Font: Source Sans Pro -->
-    <link
-      class="assets_cp"
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
-    />
-    <!-- icheck bootstrap -->
-    <link
-      class="assets_cp"
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css"
-      integrity="sha512-8vq2g5nHE062j3xor4XxPeZiPjmRDh6wlufQlfC6pdQ/9urJkU07NM0tEREeymP++NczacJ/Q59ul+/K2eYvcg=="
-      crossorigin="anonymous"
-    />
-    <!-- Theme style -->
-    <link
-      class="assets_cp"
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/3.1.0/css/adminlte.min.css"
-      integrity="sha512-mxrUXSjrxl8vm5GwafxcqTrEwO1/oBNU25l20GODsysHReZo4uhVISzAKzaABH6/tTfAxZrY2FprmeAP5UZY8A=="
-      crossorigin="anonymous"
-    />
-
+ 
     <!-- front -->
     <!-- Themefisher Icon font -->
     <link
@@ -92,8 +61,52 @@
       rel="stylesheet"
       href="/assets_front/css/style.css"
     />
+
+    <!-- cp -->
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <!-- Google Font: Source Sans Pro -->
+    <link
+      class="assets_cp"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
+    />
+    <!-- icheck bootstrap -->
+    <link
+      class="assets_cp"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/icheck-bootstrap/3.0.1/icheck-bootstrap.min.css"
+      integrity="sha512-8vq2g5nHE062j3xor4XxPeZiPjmRDh6wlufQlfC6pdQ/9urJkU07NM0tEREeymP++NczacJ/Q59ul+/K2eYvcg=="
+      crossorigin="anonymous"
+    />
+    <!-- Theme style -->
+    <link
+      class="assets_cp"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/3.1.0/css/adminlte.min.css"
+      integrity="sha512-mxrUXSjrxl8vm5GwafxcqTrEwO1/oBNU25l20GODsysHReZo4uhVISzAKzaABH6/tTfAxZrY2FprmeAP5UZY8A=="
+      crossorigin="anonymous"
+    />
+
+    
   </head>
   <body>
+    <script>
+      const url = new URL(window.location.href);
+      const pathname = url.pathname;
+      let selector =
+        pathname.includes("cp") == true ? ".assets_front" : ".assets_cp";
+        console.log(selector);
+      document
+        .querySelectorAll(selector)
+        .forEach((e) => e.parentNode.removeChild(e));
+    </script>
+    
     <noscript>
       <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
@@ -104,153 +117,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
-    <!-- jQuery 3.6.0-->
-    <script
-      class="assets_cp"
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    <!-- Bootstrap 4.6.0 -->
-    <script
-      class="assets_cp"
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-      crossorigin="anonymous"
-    ></script>
-    <!-- dropzonejs -->
-    <script 
-    class="assets_cp"
-    src="https://cdn.jsdelivr.net/npm/dropzone@5.9.2/dist/dropzone.min.js"></script>
-
-    <!-- AdminLTE App 3.1.0-->
-    <script
-      class="assets_cp"
-      src="https://cdn.jsdelivr.net/npm/admin-lte@3.1.0/dist/js/adminlte.min.js"
-    ></script>
-    <!-- <script src="/dist/cp/js/demo.js"></script> -->
-
-    <!-- front -->
-    <!-- Main jQuery -->
-    <!-- <script
-      class="assets_front"
-      src="/assets_front/plugins/jquery/dist/jquery.min.js"
-    ></script> -->
-    <!-- Bootstrap 3.1 -->
-    <script
-      class="assets_front"
-      src="/assets_front/plugins/bootstrap/js/bootstrap.min.js"
-    ></script>
-    <!-- Bootstrap Touchpin -->
-    <script
-      class="assets_front"
-      src="/assets_front/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js"
-    ></script>
-    <!-- Instagram Feed Js -->
-    <script
-      class="assets_front"
-      src="/assets_front/plugins/instafeed-js/instafeed.min.js"
-    ></script>
-    <!-- Video Lightbox Plugin -->
-    <script
-      class="assets_front"
-      src="/assets_front/plugins/ekko-lightbox/dist/ekko-lightbox.min.js"
-    ></script>
-    <!-- Count Down Js -->
-    <script
-      class="assets_front"
-      src="/assets_front/plugins/SyoTimer/build/jquery.syotimer.min.js"
-    ></script>
-
-    <!-- Revolution Slider -->
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/jquery.themepunch.tools.min.js"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/jquery.themepunch.revolution.min.js"
-    ></script>
-
-    <!-- Revolution Slider -->
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.actions.min.js"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.carousel.min.js"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.kenburn.min.js"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.layeranimation.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.migration.min.js"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.navigation.min.js"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.parallax.min.js"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.slideanims.min.js"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.video.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/revolution/js/extensions/revolution.extension.video.min.js"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/revolution-slider/assets/warning.js"
-    ></script>
-
-    <!-- Google Mapl -->
-    <script
-      class="assets_front"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCC72vZw-6tGqFyRhhg5CkF2fqfILn2Tsw"
-    ></script>
-    <script
-      class="assets_front"
-      type="text/javascript"
-      src="/assets_front/plugins/google-map/gmap.js"
-    ></script>
-
-    <!-- Main Js File -->
-    <script class="assets_front" src="/assets_front/js/script.js"></script>
-
-    <script>
-      const url = new URL(window.location.href);
-      const pathname = url.pathname;
-      let selector =
-        pathname.includes("cp") == true ? ".assets_front" : ".assets_cp";
-      document
-        .querySelectorAll(selector)
-        .forEach((e) => e.parentNode.removeChild(e));
-    </script>
   </body>
 </html>
