bug fix;add cp chart

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,6 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css"
-    />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
     <!-- front -->
@@ -124,5 +120,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </body>
 </html>
